# core-stories

./: .gitignore  HP-showcase.ipynb  Makefile  PCA-SVD-002.ipynb  PCA-SVD-004-salad.ipynb  PCA-SVD-006.ipynb  PCA-SVD-006.py  README.md  SOM-002.ipynb  SOM-002.py  SOM-salad.ipynb  art-of-war-versions.ipynb  bookclass.py  correlatebooks.py  database  fiction_list_new.txt  gutenberg-metadata-plots-old.ipynb  hierarchical-clusting-002-salad.ipynb  hierarchical-clusting-004.ipynb  makefile  more-corpus-refining.ipynb  plot_network.jl  pyproject.toml  quick-poster-figures.ipynb  recursive-bayesian-filter.html  refresh_database.py  requirements.txt  runall.sh  runnull.sh  scratch.py  word-salad-generator-playground.ipynb
.ipynb_checkpoints/: HP-showcase-checkpoint.ipynb  PCA-SVD-002-checkpoint.ipynb  PCA-SVD-004-checkpoint.ipynb  PCA-SVD-004-comparison-checkpoint.ipynb  PCA-SVD-004-salad-checkpoint.ipynb  PCA-SVD-006-checkpoint.ipynb  SOM-002-checkpoint.ipynb  SOM-salad-checkpoint.ipynb  art-of-war-versions-checkpoint.ipynb  booker-plots-checkpoint.ipynb  crazy-heatmap-checkpoint.ipynb  fill-database-from-gutenberg-checkpoint.ipynb  gutenberg-metadata-plots-checkpoint.ipynb  load-all-kindle-books-txt-checkpoint.ipynb  more-corpus-refining-checkpoint.ipynb  query-sparklines-checkpoint.ipynb  shakespeare-plays-checkpoint.ipynb  url-test-checkpoint.ipynb
VACC-scripts/: qsub.py  ring-sort-vacc.py  run.sh
output/: .gitignore
output/mode-lists/: mode01-neg-closest.csv  (+39 more)
src/: bookclass.py  bookclass_standalone.py  build_csvs.py  build_matrix.py
tests/: smoke_e2e.py
(+108 files in other folders)
