[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-stories"
version = "0.1.0"
description = "Emotional arcs of stories analysis code"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "django>=5.2.14",
    "labMTsimple>=2.8",
    "lz4",
    "jinja2",
    "nltk>=3.9.4",
    "spacy>=3.8.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

