[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-stories"
version = "0.1.0"
description = "Emotional arcs of stories analysis code"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "labMTsimple>=2.8",
    "jinja2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

